--- a/html/activities/activity-form.html
+++ b/html/activities/activity-form.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -23,8 +23,8 @@
   <section>
     <nav class="navbar">
       <div class="navbar-brand">
-        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">CHURCH</h1>
+        <img class="navbar-brand-logo" src="../../images/logo.png" alt="Web application logo">
+        <h1 class="navbar-brand-text">Church</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -39,7 +39,7 @@
         </li>
       </ul>
 
-      <div class="grid-bottom-container">
+      <div class="bottom-navbar-container">
         <hr class="nav-divider">
         <a class="nav-link" href="../../index.html">Logout</a>
       </div>
@@ -55,33 +55,41 @@
 
       <form class="form-container" action="" method="post" id="activityScheduleForm">
 
-        <label label for="">Activity Name</label>
-        <input class="input" type="text" name="" value="" placeholder="Insert activity title here">
+        <div class="row-flex">
+          <span class="col-12">
+            <label label for="">Activity Name</label>
+            <input class="input" type="text">
+          </span>
 
-        <div class="row">
-
-          <div class="">
-            <label label for="">Organizer's Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Insert organizer's name here">
-            <label label for="">Budget</label>
-            <input class="input" type="text" name="" value="" placeholder="Insert budget here">
-            <label>Date</label>
-            <input class="input" type="date" required>
-          </div>
-
-          <div class="">
-            <label label for="">Contact Number</label>
-            <input class="input" type="text" name="" value="" placeholder="xxxxxxxxxxx">
+          <span class="col-12">
             <label label for="">Location</label>
-            <input class="input" type="text" name="" value="" placeholder="Insert location here">
-            <label>Time</label>
-            <input class="input" type="Time" required>
+            <input class="input" type="text">
+          </span>
+
+          <div class="row-flex col-12">
+            <div class="col-9">
+              <label label for="">Organizer's Name</label>
+              <input class="input" type="text" name="" value="" placeholder="Insert organizer's name here">
+
+              <label>Description</label>
+              <textarea class="input textarea" name="name" rows="9" placeholder="Insert description here"></textarea>
+            </div>
+
+            <div class="col-3">
+              <label label for="">Contact Number</label>
+              <input class="input" type="text">
+
+              <label>Date</label>
+              <input class="input" type="date">
+
+              <label>Time</label>
+              <input class="input" type="Time">
+
+              <label label for="">Budget</label>
+              <input class="input" type="text">
+            </div>
           </div>
-
-        </div
-
-        <label>Description</label>
-        <textarea class="input textarea" name="name" rows="5" placeholder="Insert description here"></textarea>
+        </div>
 
       </form>
     </div>
