--- a/html/authentication/verify-email.html
+++ b/html/authentication/verify-email.html
@@ -55,7 +55,7 @@
   <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
 
   <!-- Functionality -->
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="../../js/index.js"></script>
 </body>
 
 </html>
