--- a/html/events/details/baptismal.html
+++ b/html/events/details/baptismal.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -23,8 +23,8 @@
   <section>
     <nav class="navbar">
       <div class="navbar-brand">
-        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">CHURCH</h1>
+        <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
+        <h1 class="navbar-brand-text">Church</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -39,225 +39,268 @@
         </li>
       </ul>
 
-      <div class="grid-bottom-container">
+      <div class="bottom-navbar-container">
         <hr class="nav-divider">
         <a class="nav-link" href="../../../index.html">Logout</a>
       </div>
     </nav>
   </section>
 
-  <main class="content content-fill">
-    <div class="details-page form-page">
+  <main class="content details-page">
+    <header class="section-header" id="certificateHeader">
+      <div class="side-to-side">
+        <h2 class="section-heading">Baptismal | Name</h2>
+        <button class="btn" type="button" name="button">Create Certificate</button>
+      </div>
+    </header>
 
-      <div>
-        <header class="section-header" id="certificateHeader">
-          <div class="side-to-side">
-            <h2 class="section-heading">Baptismal | Name</h2>
-            <button class="btn" type="button" name="button">Certificate</button>
-          </div>
+    <form method="post" id="baptismalDetails">
+      <div class="row-flex">
+        <span class="col-9">
+          <label for="">Church Name</label>
+          <input class="input" type="text">
+        </span>
 
-          <hr>
-        </header>
+        <span class="col-3">
+          <label for="">Registry No.</label>
+          <input class="input" type="text">
+        </span>
 
-        <form class="form-container" action="" method="post" id="baptismalDetails">
-
-          <div class="row">
-
-            <div class="">
-              <label for="">Church Name</label>
-              <input class="input" type="text" name="" value="" placeholder="">
-              <label for="">Organizer</label>
-              <input class="input" type="text" name="" value="" placeholder="">
-              <label for="">Date</label>
-              <input class="input" type="date" name="" value="" placeholder="">
-            </div>
-
-            <div class="">
-              <label for="">Registry No.</label>
-              <input class="input" type="text" name="" value="">
-              <label for="">Contact No.</label>
-              <input class="input" type="email" name="" value="" placeholder="">
-              <label for="">Time</label>
-              <input class="input" type="time" name="">
-            </div>
-
-          </div>
-
+        <span class="col-9">
           <label for="">Location</label>
           <input class="input" type="text" name="" value="" placeholder="">
+        </span>
 
-          <hr>
+        <span class="col-3">
+          <label for="">Date</label>
+          <input class="input" type="date" name="" value="" placeholder="">
+        </span>
 
-          <h3 class="heading2">Child</h3>
+        <span class="col-6">
+          <label for="">Organizer</label>
+          <input class="input" type="text">
+        </span>
 
-          <div class="row">
+        <span class="col-3">
+          <label for="">Contact No.</label>
+          <input class="input" type="text">
+        </span>
 
-            <div class="">
-              <label for="">Name</label>
-              <input class="input" type="text" placeholder="Surname, Firstname M.I">
-
-              <label for="">Religion</label>
-              <input class="input" type="text">
-
-              <label for="">Citizenship</label>
-              <input class="input" type="text">
-            </div>
-
-            <div class="">
-              <label for="">Age</label>
-              <input class="input" type="text">
-
-              <label for="">Birthdate</label>
-              <input class="input" type="date">
-
-              <label for="">Birthplace</label>
-              <input class="input" type="text" name="" value="" placeholder="">
-            </div>
-          </div>
-
-          <h4 class="heading2">Mother</h4>
-
-          <div class="row">
-            <div class="">
-              <label for="">Name</label>
-              <input class="input" type="text" placeholder="Surname, Firstname M.I">
-
-              <label for="">Address</label>
-              <input class="input" type="text" placeholder="House no. Street, City/ Municipality, Province, Country">
-
-              <label for="">Telephone No.</label>
-              <input class="input" type="number">
-            </div>
-
-            <div class="">
-              <label for="">Age</label>
-              <input class="input" type="number">
-
-              <label for="">Birthdate</label>
-              <input class="input" type="date">
-
-              <label for="">Birthplace</label>
-              <input class="input" type="text">
-            </div>
-
-            <div class="">
-              <label for="">Occupation</label>
-              <input class="input" type="text">
-
-              <label for="">Religion</label>
-              <input class="input" type="text">
-
-              <label for="">Date of Marriage</label>
-              <input class="input" type="date">
-            </div>
-          </div>
-
-          <h4 class="heading2">Father</h4>
-
-          <div class="row">
-            <div class="">
-              <label for="">Name</label>
-              <input class="input" type="text" placeholder="Surname, Firstname M.I">
-
-              <label for="">Address</label>
-              <input class="input" type="text" placeholder="House no. Street, City/ Municipality, Province, Country">
-
-              <label for="">Telephone No.</label>
-              <input class="input" type="number">
-            </div>
-
-            <div class="">
-              <label for="">Age</label>
-              <input class="input" type="number">
-
-              <label for="">Birthdate</label>
-              <input class="input" type="date">
-
-              <label for="">Birthplace</label>
-              <input class="input" type="text">
-            </div>
-
-            <div class="">
-              <label for="">Occupation</label>
-              <input class="input" type="text">
-
-              <label for="">Religion</label>
-              <input class="input" type="text">
-
-              <label for="">Date of Marriage</label>
-              <input class="input" type="date">
-            </div>
-          </div>
-
-          <hr>
-
-          <div class="sponsor">
-
-            <h3 class="heading2">Sponsors</h3>
-
-            <h4 class="heading3">Main Sponsor*</h4>
-            <div class="row">
-
-              <div class="">
-                <h5 class="heading4">Male Sponsor</h5>
-                <label for="name">Name</label>
-                <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I.">
-              </div>
-
-              <div class="">
-                <h5 class="heading4">Female Sponsor</h5>
-                <label for="name">Name</label>
-                <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I.">
-              </div>
-            </div>
-
-            <hr>
-
-            <div>
-              <h4 class="heading3">Other Sponsors</h4>
-
-              <div class="row">
-                <div class="">
-                  <label for="">Name</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                  <label for="">Name</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                  <label for="">Name</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                  <label for="">Name</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                </div>
-
-                <div class="">
-                  <label for="">Name</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                  <label for="">Name</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                  <label for="">Name</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                  <label for="">Name</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </form>
+        <span class="col-3">
+          <label for="">Time</label>
+          <input class="input" type="time">
+        </span>
       </div>
 
-      <div class="side-to-side">
-        <button class="btn btn-outline btn-secondary" onclick="changePage('../index.html')">Cancel</button>
-        <!-- <button class="btn" type="submit" onclick="" form="baptismalDetails">Save</button> -->
-        <button class="btn" type="submit" onclick="changePage('baptismal.html')">Save</button>
+      <hr>
+
+      <h3 class="heading3">Child</h3>
+
+      <div class="row-flex">
+        <span class="col-6">
+          <label for="">Name</label>
+          <input class="input" type="text" placeholder="Surname, Firstname M.I">
+        </span>
+
+        <span class="col-3">
+          <label for="">Age</label>
+          <input class="input" type="number">
+        </span>
+
+        <span class="col-3">
+          <label for="">Birthdate</label>
+          <input class="input" type="date">
+        </span>
+
+        <span class="col-9">
+          <label for="">Birthplace</label>
+          <input class="input" type="text" name="" value="" placeholder="">
+        </span>
+
+        <span class="col-3">
+          <label for="">Religion</label>
+          <input class="input" type="text">
+        </span>
+
+        <span class="col-9">
+          <label for="">Address</label>
+          <input class="input" type="text">
+        </span>
+
+        <span class="col-3">
+          <label for="">Citizenship</label>
+          <input class="input" type="text">
+        </span>
       </div>
-    </div>
 
+      <h3 class="heading3">Guardian</h3>
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
+      <div class="row-flex">
+        <span class="col-9">
+          <label for="">Name</label>
+          <input class="input" type="text" placeholder="Surname, Firstname M.I">
+        </span>
 
-    <!-- Functionality -->
-    <script type="text/javascript" src="../../../js/index.js"></script>
+        <span class="col-3">
+          <label for="">Contact No.</label>
+          <input class="input" type="number">
+        </span>
+
+        <span class="col-9">
+          <label for="">Address</label>
+          <input class="input" type="text">
+        </span>
+      </div>
+
+      <h3 class="heading3">Mother</h3>
+
+      <div class="row-flex">
+        <span class="col-6">
+          <label for="">Name</label>
+          <input class="input" type="text" placeholder="Surname, Firstname M.I">
+        </span>
+
+        <span class="col-3">
+          <label for="">Telephone No.</label>
+          <input class="input" type="number">
+        </span>
+
+        <span class="col-3">
+          <label for="">Occupation</label>
+          <input class="input" type="text">
+        </span>
+
+        <span class="col-6">
+          <label for="">Birthplace</label>
+          <input class="input" type="text" name="" value="" placeholder="">
+        </span>
+
+        <span class="col-3">
+          <label for="">Birthdate</label>
+          <input class="input" type="date">
+        </span>
+
+        <span class="col-3">
+          <label for="">Religion</label>
+          <input class="input" type="text">
+        </span>
+
+        <span class="col-9">
+          <label for="">Address</label>
+          <input class="input" type="text" placeholder="House no. Street, City/ Municipality, Province, Country">
+        </span>
+
+        <span class="col-3">
+          <label for="">Citizenship</label>
+          <input class="input" type="text">
+        </span>
+      </div>
+
+      <h3 class="heading3">Father</h3>
+
+      <div class="row-flex">
+        <span class="col-6">
+          <label for="">Name</label>
+          <input class="input" type="text" placeholder="Surname, Firstname M.I">
+        </span>
+
+        <span class="col-3">
+          <label for="">Telephone No.</label>
+          <input class="input" type="number">
+        </span>
+
+        <span class="col-3">
+          <label for="">Occupation</label>
+          <input class="input" type="text">
+        </span>
+
+        <span class="col-6">
+          <label for="">Birthplace</label>
+          <input class="input" type="text" name="" value="" placeholder="">
+        </span>
+
+        <span class="col-3">
+          <label for="">Birthdate</label>
+          <input class="input" type="date">
+        </span>
+
+        <span class="col-3">
+          <label for="">Religion</label>
+          <input class="input" type="text">
+        </span>
+
+        <span class="col-9">
+          <label for="">Address</label>
+          <input class="input" type="text" placeholder="House no. Street, City/ Municipality, Province, Country">
+        </span>
+
+        <span class="col-3">
+          <label for="">Citizenship</label>
+          <input class="input" type="text">
+        </span>
+      </div>
+
+      <div class="center-horizontal col-4">
+        <label for="">Date of Marriage</label>
+        <input class="input" type="date">
+      </div>
+
+      <div class="sponsor">
+        <h3 class="heading2">Sponsors</h3>
+
+        <h4 class="heading3">Main Sponsor</h4>
+        <div class="row">
+
+          <div class="sponsor-form">
+            <h5 class="heading4">Male Sponsor</h5>
+            <label for="name">Name</label>
+            <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I.">
+          </div>
+
+          <div class="sponsor-form">
+            <h5 class="heading4">Female Sponsor</h5>
+            <label for="name">Name</label>
+            <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I.">
+          </div>
+        </div>
+
+        <hr>
+
+        <h4 class="heading3">Other Sponsors</h4>
+
+        <div class="row">
+          <div class="sponsor-form">
+            <label for="">Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+            <label for="">Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+            <label for="">Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+            <label for="">Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+          </div>
+
+          <div class="sponsor-form">
+            <label for="">Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+            <label for="">Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+            <label for="">Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+            <label for="">Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+          </div>
+        </div>
+      </div>
+
+    </form>
+  </main>
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
+
+  <!-- Functionality -->
+  <script type="text/javascript" src="../../../js/index.js"></script>
 </body>
 
 </html>
