--- a/html/events/forms/baptismal.html
+++ b/html/events/forms/baptismal.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -23,8 +23,8 @@
   <section>
     <nav class="navbar">
       <div class="navbar-brand">
-        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">CHURCH</h1>
+        <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
+        <h1 class="navbar-brand-text">Church</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -39,7 +39,7 @@
         </li>
       </ul>
 
-      <div class="grid-bottom-container">
+      <div class="bottom-navbar-container">
         <hr class="nav-divider">
         <a class="nav-link" href="../../../index.html">Logout</a>
       </div>
@@ -53,101 +53,171 @@
         <hr>
       </header>
 
-      <form class="form-container" action="" method="post" id="baptismalScheduleForm">
-
+      <form class="slider" method="post" id="baptismalScheduleForm">
         <!-- 1st Slide -->
-        <div class="">
+        <div class="col-12">
 
           <h3 class="heading2">Child</h3>
-          <div class="row">
-            <div>
-              <label for="name">Name</label>
-              <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I.">
-              <label for="bplace">Birthplace</label>
-              <input class="input" type="text" id="bplace" name="bplace" placeholder="">
-              <label for="religion">Religion</label>
-              <input class="input" type="text" id="religion" name="religion" placeholder="">
-              <label for="cit">Citizenship</label>
-              <input class="input" type="text" id="cit" name="cit" placeholder="">
-            </div>
 
-            <div>
+          <div class="row-flex">
+
+            <span class="col-9">
+              <label for="name">Name</label>
+              <input class="input" type="text" id="name" placeholder="Surname, Name, M.I." required />
+            </span>
+
+            <span class="col-3">
               <label for="">Age</label>
-              <input class="input" type="number" name="" value="">
+              <input class="input" type="number" required />
+            </span>
+
+            <span class="col-9">
+              <label for="bplace">Birthplace</label>
+              <input class="input" type="text" id="bplace" required />
+            </span>
+
+            <span class="col-3">
               <label for="">Birthdate</label>
-              <input class="input" type="date" name="" value="">
-            </div>
+              <input class="input" type="date" required />
+            </span>
+
           </div>
+
+          <label for="childAddress">Address</label>
+          <input class="input" type="text" id="childAddress" required />
+
+          <div class="row-flex center-horizontal col-8">
+            <span class="col-6">
+              <label for="religion">Religion</label>
+              <input class="input" type="text" id="religion" required />
+            </span>
+
+            <span class="col-6">
+              <label for="cit">Citizenship</label>
+              <input class="input" type="text" id="cit" required />
+            </span>
+          </div>
+
+          <h3 class="heading2">Guardian</h3>
+
+          <div class="row-flex">
+
+            <span class="col-9">
+              <label for="name">Name</label>
+              <input class="input" type="text" id="name" placeholder="Surname, Name, M.I." required />
+            </span>
+
+            <span class="col-3">
+              <label for="">Contact No.</label>
+              <input class="input" type="number" required />
+            </span>
+
+            <span class="col-9">
+              <label for="guardianAddress">Address</label>
+              <input class="input" type="text" id="guardianAddress" required />
+            </span>
+          </div>
+
         </div>
 
         <!-- 2nd Slide -->
-        <div class="">
+        <div class="col-12">
           <h4 class="heading2">Mother</h4>
 
-          <div class="row">
-            <div class="">
+          <div class="row-flex">
+            <span class="col-6">
               <label for="">Name</label>
-              <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-              <label for="">Birthplace</label>
-              <input class="input" type="text" name="" value="" placeholder="">
-              <label for="">Address</label>
-              <input class="input" type="text" name="" value="" placeholder="House no. Street, City/Municipality, Province, Country">
-            </div>
+              <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." required />
+            </span>
 
-            <div class="">
-              <label for="">Birthdate</label>
-              <input class="input" type="date" name="" value="">
+            <span class="col-3">
               <label for="">Telephone No.</label>
-              <input class="input" type="tel" name="" value="" placeholder="">
-              <label for="">Occupation</label>
-              <input class="input" type="text" name="">
-            </div>
+              <input class="input" type="tel" required />
+            </span>
 
-            <div class="">
+            <span class="col-3">
+              <label for="">Occupation</label>
+              <input class="input" type="text" name="" required />
+            </span>
+
+            <span class="col-6">
+              <label for="">Birthplace</label>
+              <input class="input" type="text" name="" value="" placeholder="" required />
+            </span>
+
+            <span class="col-3">
+              <label for="">Birthdate</label>
+              <input class="input" type="date" name="" value="" required />
+            </span>
+
+            <span class="col-3">
               <label for="">Religion</label>
-              <input class="input" type="text" name="" value="">
-              <label for="">Age</label>
-              <input class="input" type="number" name="" value="" placeholder="">
-              <label for="">Date of Marriage</label>
-              <input class="input" type="date" name="">
+              <input class="input" type="text" name="" value="" required />
+            </span>
+
+            <span class="col-6">
+              <label for="">Address</label>
+              <input class="input" type="text" name="" value="" placeholder="House no. Street, City/Municipality, Province, Country" required />
+            </span>
+
+            <div class="center-horizontal col-3">
+              <label for="cit">Citizenship</label>
+              <input class="input" type="text" id="cit" required />
             </div>
           </div>
 
           <h2 class="heading2">Father</h2>
-          <div class="row">
-            <div class="">
-              <label for="">Name</label>
-              <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-              <label for="">Birthplace</label>
-              <input class="input" type="text" name="" value="" placeholder="">
-              <label for="">Address</label>
-              <input class="input" type="text" name="" value="" placeholder="House no. Street, City/Municipality, Province, Country">
-            </div>
 
-            <div class="">
-              <label for="">Birthdate</label>
-              <input class="input" type="date" name="" value="">
+          <div class="row-flex">
+            <span class="col-6">
+              <label for="">Name</label>
+              <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." required />
+            </span>
+
+            <span class="col-3">
               <label for="">Telephone No.</label>
-              <input class="input" type="tel" name="" value="" placeholder="">
+              <input class="input" type="tel">
+            </span>
+
+            <span class="col-3">
               <label for="">Occupation</label>
               <input class="input" type="text" name="">
-            </div>
+            </span>
 
-            <div class="">
+            <span class="col-6">
+              <label for="">Birthplace</label>
+              <input class="input" type="text" name="" value="" placeholder="">
+            </span>
+
+            <span class="col-3">
+              <label for="">Birthdate</label>
+              <input class="input" type="date" name="" value="">
+            </span>
+
+            <span class="col-3">
               <label for="">Religion</label>
               <input class="input" type="text" name="" value="">
-              <label for="">Age</label>
-              <input class="input" type="email" name="" value="" placeholder="">
-              <label for="">Date of Marriage</label>
-              <input class="input" type="date" name="">
+            </span>
+
+            <span class="col-6">
+              <label for="">Address</label>
+              <input class="input" type="text" name="" value="" placeholder="House no. Street, City/Municipality, Province, Country">
+            </span>
+
+            <div class="center-horizontal col-3">
+              <label for="cit">Citizenship</label>
+              <input class="input" type="text" id="cit" />
             </div>
+          </div>
+
+          <div class="center-horizontal col-6">
+            <label for="">Date of Marriage (Optional)</label>
+            <input class="input" type="date" />
           </div>
         </div>
 
-        <hr>
-
         <!-- 3rd Slide -->
-        <div class="sponsor">
+        <div class="sponsor col-12">
           <h4 class="heading2">Sponsors</h4>
           <h4 class="heading3">Main Sponsor*</h4>
           <div class="row">
@@ -155,13 +225,13 @@
             <div class="">
               <h5 class="heading4">Male Sponsor</h5>
               <label for="name">Name</label>
-              <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I.">
+              <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I." required />
             </div>
 
             <div class="">
               <h5 class="heading4">Female Sponsor</h5>
               <label for="name">Name</label>
-              <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I.">
+              <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I." required />
             </div>
           </div>
 
@@ -171,47 +241,26 @@
             <div class="row">
               <div class="">
                 <label for="">Name</label>
-                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." />
                 <label for="">Name</label>
-                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." />
                 <label for="">Name</label>
-                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." />
                 <label for="">Name</label>
-                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." />
               </div>
 
               <div class="">
                 <label for="">Name</label>
-                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." />
                 <label for="">Name</label>
-                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." />
                 <label for="">Name</label>
-                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." />
                 <label for="">Name</label>
-                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
+                <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I." />
               </div>
 
-            </div>
-
-            <hr>
-
-            <div>
-              <h2 class="heading2">Event Settings</h2>
-              <div class="row">
-                <div class="">
-                  <label for="">Church Name</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                  <label for="">Organizer</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                </div>
-
-                <div class="">
-                  <label for="">Location</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                  <label for="">Contact No.</label>
-                  <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -219,17 +268,34 @@
     </div>
 
     <div class="side-to-side">
-      <button class="btn btn-outline btn-secondary " onclick="changePage('../index.html')">Back</button>
-      <!-- Use the button with form attribute for backend -->
-      <!-- <button class="btn" type="submit" onclick="" form="baptismalScheduleForm">Submit</button> -->
-      <button class="btn" onclick="changePage('../index.html')">Submit</button>
+      <button class="btn btn-outline btn-secondary invisible" id="slidePrev">Back</button>
+      <button class="btn" id="slideNext">Next</button>
     </div>
-
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
 
     <!-- Functionality -->
+    <script type="text/javascript">
+      var slideCounter = 1;
+
+      document.getElementById('slideNext').addEventListener('click', function(e) {
+        slideCounter = nextSlide('baptismalScheduleForm', slideCounter);
+        if (slideCounter == document.getElementById('baptismalScheduleForm').childElementCount) {
+          document.getElementById(e.target.id).textContent = "Submit";
+        } else if (slideCounter > 1) {
+          document.getElementById('slidePrev').classList.remove('invisible');
+        }
+      })
+
+      document.getElementById('slidePrev').addEventListener('click', function(e) {
+        slideCounter = previousSlide('baptismalScheduleForm', slideCounter);
+        document.getElementById('slideNext').textContent = "Next";
+        if (slideCounter == 1) {
+          document.getElementById(e.target.id).classList.add('invisible');
+        }
+      })
+    </script>
     <script type="text/javascript" src="../../../js/index.js"></script>
 </body>
 
